--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <section class="hero">
     <div class="hero-content">
       <h1 style="font-size: 35px; color: orange;">Empower Lives With Compassion</h1>
-      <p style="font-size: 12px;">Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
+      <p style="font-size: 12px;">Nur Al-sadaqa foundation uganda welcomes you to serving humanity and uplifting vulnerable communities. We are aimed at compassion, empathy and kindness. Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
       <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate Now gofundme</a>
     </div>
   </section>
@@ -186,6 +186,22 @@
     <p>Nur Al‑Sadaqa Foundation Uganda is a voluntary, social economic and indpendent foundation whose major aim is to strengthern islamic beliefs, charity services, ramadhan feeding, water wells drilling, mosque construction and food distribution. etc
       We are aimed at a mission of providing quality service delivery and emergency aid to the most vulnarable communities for human welfare.
     </p>
+    <h3>Our focus</h3>
+    <ul>
+      <li>Charity services, providing essential support to those in need.</li>
+      <li>Ramadhan feeding programs, Nourishing families during the holly month of Ramadhan.</li>
+      <li>Access to clean water, drilling water wells for sustainable living.</li>
+      <li>Mosque construction, building sacred spaces for spiritual growth.</li>
+      <li>Emergency relief, responding to crisis with timely aid.</li>
+    </ul>
+    <p>Your contribution matters because every donation brings hope, relief and transformation. Help us spread kindness, compassion and joy. Together we can create a brighter future for those in need.</p>
+    <h4>Donate today, Your support will:</h4>
+    <ul>
+      <li>Feed the hungry</li>
+      <li>Quench the thirsty.</li>
+      <li>Shelter the vulnerable</li>
+      <li>empower communities.</li>
+    </ul>
   </section>
   <section class="contact-section" id="contact">
     <h2>Contact Us</h2>
