--- a/files/food for life.html
+++ b/files/food for life.html
@@ -81,19 +81,19 @@
         <h3 style="border-bottom:2px solid white; padding-bottom:10px;">Appeals</h3>
         <ul style="list-style:none; padding:0;">
           <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Orphan Fund</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\food for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Food for Life</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\water for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Water for Life</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\zakat.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Zakat</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\sadaqah jaariyah.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Sadaqah Jaariyah</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\bulid a masjid.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Building a Masjid</a></li>
+          <li><a href="food for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Food for Life</a></li>
+          <li><a href="water for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Water for Life</a></li>
+          <li><a href="zakat.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Zakat</a></li>
+          <li><a href="sadaqah jaariyah.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Sadaqah Jaariyah</a></li>
+          <li><a href="bulid a masjid.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Building a Masjid</a></li>
         </ul>
        </div>
       <div style="flex:1; min-width:200px; margin-bottom:20px;">
         <h3 style="border-bottom:2px solid white; padding-bottom:10px;">Quick Links</h3>
         <ul style="list-style:none; padding:0;">
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\index.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\index.html#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\index.html#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
+          <li><a href="../index.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
+          <li><a href="../index.html#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
+          <li><a href="../index.html#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
            <li><a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" style="color:white; text-decoration:none; display:block; padding:5px 0;">Donate</a></li>
         </ul>
       </div>
