--- a/files/sadaqah jaariyah.html
+++ b/files/sadaqah jaariyah.html
@@ -80,11 +80,11 @@ Sadaqah Jaariyah is the gift that never stops giving. Whether it's a water well,
       <div style="flex:1; min-width:200px; margin-bottom:20px;">
         <h3 style="border-bottom:2px solid white; padding-bottom:10px;">Appeals</h3>
         <ul style="list-style:none; padding:0;">
-          <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Orphan Fund</a></li>
+          <li><a href="orphan fund appeal.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Orphan Fund</a></li>
           <li><a href="food for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Food for Life</a></li>
           <li><a href="water for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Water for Life</a></li>
           <li><a href="zakat.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Zakat</a></li>
-          <li><a href="sadaqah jaariyah.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Sadaqah Jaariyah</a></li>
+          <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Sadaqah Jaariyah</a></li>
           <li><a href="bulid a masjid.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Building a Masjid</a></li>
         </ul>
       </div>
