--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="top-bar">
     <a href="tel:+256787692709">Call Us</a>
-    <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB">Donate</a>
+     <a href="donate-copy.html class="btn">Donate Zakat</a>
   </div>
   <header>
     <img src="logo.png" alt="Nur Al‑Sadaqa Logo">
@@ -121,7 +121,7 @@
         </div>
       </div>
     </div>
-    <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate Zakat</a>
+    <a href="donate-copy.html class="btn">Donate Zakat</a>
   </section>
     <!-- Sadaqah Jaariyah Section -->
     <section class="sadaqah-section">
@@ -150,7 +150,7 @@
           </div>
         </div>
       </div>
-      <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Give Sadaqah Jaariyah</a>
+      <a href="donate-copy.html class="btn">Give Sadaqah Jaariyah</a>
     </section> 
 
     <!-- latest news section-->
@@ -218,13 +218,7 @@
       <button type="submit">Send Message</button>
     </form>    
   </section>
-    <!-- Bank Details Section -->
-    <section class="bank-details">
-      <h3>Direct Bank Donations</h3>
-      <p><strong>Account Name:</strong> Nur Al Sadaqa Charity Foundation</p>
-      <p><strong>Account Number:</strong> 1014203182860</p>
-      <p><strong>SWIFT Code:</strong> EQBLUGKA</p>
-    </section>
+
   <!-- Footer Section with Appeals, Quick Links, Follow Us -->
   <footer style="background-color:#006644; color:white; padding:40px 20px;">
     <div style="max-width:1200px; margin:0 auto; display:flex; flex-wrap:wrap; justify-content:space-between;">
@@ -245,7 +239,7 @@
           <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
           <li><a href="#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
           <li><a href="#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
-          <li><a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" style="color:white; text-decoration:none; display:block; padding:5px 0;">Donate</a></li>
+          <li><a href="donate-copy.html" class="btn" style="color:white; text-decoration:none; display:block; padding:5px 0;"> Donate</a></li>
         </ul>
       </div>
         <div>
