--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="top-bar">
     <a href="tel:+256787692709">Call Us</a>
-     <a href="donate-copy.html class="btn">Donate Zakat</a>
+     <a href="donate-Copy.html class="btn">Donate</a>
   </div>
   <header>
     <img src="logo.png" alt="Nur Al‑Sadaqa Logo">
@@ -121,7 +121,7 @@
         </div>
       </div>
     </div>
-    <a href="donate-copy.html class="btn">Donate Zakat</a>
+    <a href="donate-Copy.html" class="btn">Donate Zakat</a>
   </section>
     <!-- Sadaqah Jaariyah Section -->
     <section class="sadaqah-section">
@@ -150,7 +150,7 @@
           </div>
         </div>
       </div>
-      <a href="donate-copy.html class="btn">Give Sadaqah Jaariyah</a>
+      <a href="donate-Copy.html" class="btn">Give Sadaqah Jaariyah</a>
     </section> 
 
     <!-- latest news section-->
@@ -239,7 +239,7 @@
           <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
           <li><a href="#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
           <li><a href="#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
-          <li><a href="donate-copy.html" class="btn" style="color:white; text-decoration:none; display:block; padding:5px 0;"> Donate</a></li>
+          <li><a href="donate-Copy.html" class="btn" style="color:white; text-decoration:none; display:block; padding:5px 0;"> Donate</a></li>
         </ul>
       </div>
         <div>
