--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <div class="top-bar">
     <a href="tel:+256787692709">Call Us</a>
-     <a href="donate.html" class="btn">Donate</a>
+     <a href="donate.html">Donate</a>
   </div>
   <header>
     <img src="logo.png" alt="Nur Al‑Sadaqa Logo">
