--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Orphan Fund - Nur Al‑Sadaqa Foundation Uganda</title>
-  <link rel="stylesheet" href="../styles.css"/> <!-- Optional if you move styles to an external CSS file -->
+  <link rel="stylesheet" href="styles.css"/> <!-- Optional if you move styles to an external CSS file -->
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -47,7 +47,7 @@
 </head>
 <body>
   <header>
-    <img src="../logo.png" alt="Nur Al‑Sadaqa Logo">
+    <img src="logo.png" alt="Nur Al‑Sadaqa Logo">
     <nav>
       <a href="#">Home</a>
       <a href="#about">About</a>
@@ -59,7 +59,7 @@
     <div class="hero-content">
       <h1 style="font-size: 35px; color: orange;">Empower Lives With Compassion</h1>
       <p style="font-size: 12px;">Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
-      <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate Now gofundme</a>
+      <a href="#" class="btn">Donate Now </a>
     </div>
   </section>
 
@@ -81,17 +81,17 @@
   <h3>You Can Also Donate Via</h3>
   <div class="payment-logos" style="display:flex; justify-content:center; gap:40px; flex-wrap:wrap; margin-top:20px;">
     <img
-      src="../moneygram.jpeg"
+      src="moneygram.jpeg"
       alt="MoneyGram"
       style="height:60px;"
     >
     <img
-      src="../Western-Union.jpg" 
+      src="Western-Union.jpg" 
       alt="Western Union"
       style="height:60px;"
     >
     <img
-       src="../Ria logo.png" 
+       src="Ria logo.png" 
       alt="Ria Money Transfer"
       style="height:60px;"
     >
@@ -106,21 +106,21 @@
      <div style="flex:1; min-width:200px; margin-bottom:20px;">
         <h3 style="border-bottom:2px solid white; padding-bottom:10px;">Appeals</h3>
         <ul style="list-style:none; padding:0;">
-          <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Orphan Fund</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\food for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Food for Life</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\water for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Water for Life</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\zakat.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Zakat</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\sadaqah jaariyah.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Sadaqah Jaariyah</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\files\bulid a masjid.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Building a Masjid</a></li>
+          <li><a href="../orphan fund appeal.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Orphan Fund</a></li>
+          <li><a href="../files\food for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Food for Life</a></li>
+          <li><a href="../files\water for life.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Water for Life</a></li>
+          <li><a href="../files\zakat.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Zakat</a></li>
+          <li><a href="../sadaqah jaariyah.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Sadaqah Jaariyah</a></li>
+          <li><a href="../files\bulid a masjid.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Building a Masjid</a></li>
         </ul>
        </div>
       <div style="flex:1; min-width:200px; margin-bottom:20px;">
         <h3 style="border-bottom:2px solid white; padding-bottom:10px;">Quick Links</h3>
         <ul style="list-style:none; padding:0;">
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\index.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\index.html#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
-          <li><a href="C:\Users\EASTERN YOUTH ELITES\Desktop\nur al sadaqa\index.html#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
-           <li><a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" style="color:white; text-decoration:none; display:block; padding:5px 0;">Donate</a></li>
+          <li><a href="index.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
+          <li><a href="index.html#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
+          <li><a href="index.html#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
+           <li><a href="#" style="color:white; text-decoration:none; display:block; padding:5px 0;">Donate</a></li>
         </ul>
       </div>
         <div>
