--- a/donate.html
+++ b/donate.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Orphan Fund - Nur Al‑Sadaqa Foundation Uganda</title>
-  <link rel="stylesheet" href="styles.css"/> <!-- Optional if you move styles to an external CSS file -->
+  <link rel="stylesheet" href="styles.css">
+ <!-- Optional if you move styles to an external CSS file -->
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
