--- a/donate.html
+++ b/donate.html
@@ -87,12 +87,12 @@
       style="height:60px;"
     >
     <img
-      src="Western-Union.jpg" 
+      src="Western.jpg" 
       alt="Western Union"
       style="height:60px;"
     >
     <img
-       src="Ria logo.png" 
+       src="Ria.png" 
       alt="Ria Money Transfer"
       style="height:60px;"
     >
