--- a/donate.html
+++ b/donate.html
@@ -96,6 +96,13 @@
       alt="Ria Money Transfer"
       style="height:60px;"
     >
+
+      <img
+      src="paypal.jpg"
+      alt="paypal"
+      style="height:60px;"
+    >
+    
   </div>
   <p style="margin-top:20px;">Visit your nearest branch and mention the account name to donate.</p>
 </section>
