--- a/files/bulid a masjid.html
+++ b/files/bulid a masjid.html
@@ -59,7 +59,7 @@
     <div class="hero-content">
       <h1 style="font-size: 35px; color: orange;">Empower Lives With Compassion</h1>
       <p style="font-size: 12px;">Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
-      <a href="../donate.html class="btn">Donate Now</a>
+      <a href="../donate.html" class="btn">Donate Now</a>
     </div>
   </section>
   <!-- Main content -->
