--- a/files/water for life.html
+++ b/files/water for life.html
@@ -59,7 +59,7 @@
     <div class="hero-content">
       <h1 style="font-size: 35px; color: orange;">Empower Lives With Compassion</h1>
       <p style="font-size: 12px;">Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
-      <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate Now gofundme</a>
+      <a href="../donate.html" class="btn">Donate Now</a>
     </div>
   </section>
   <!-- Main content -->
@@ -94,7 +94,7 @@
           <li><a href="../index.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Home</a></li>
           <li><a href="../index.html#about" style="color:white; text-decoration:none; display:block; padding:5px 0;">About Us</a></li>
           <li><a href="../index.html#contact" style="color:white; text-decoration:none; display:block; padding:5px 0;">Contact</a></li>
-           <li><a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" style="color:white; text-decoration:none; display:block; padding:5px 0;">Donate</a></li>
+           <li><a href="../donate.html" style="color:white; text-decoration:none; display:block; padding:5px 0;">Donate</a></li>
         </ul>
       </div>
         <div>
