--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="hero-content">
       <h1 style="font-size: 35px; color: orange;">Empower Lives With Compassion</h1>
       <p style="font-size: 12px;">Nur Al-sadaqa foundation uganda welcomes you to serving humanity and uplifting vulnerable communities. We are aimed at compassion, empathy and kindness. Join us to bring hope and support to vulnerable communities in Uganda. Serving humanity and transformation of communities to poverty free society and economic empowerement.</p>
-      <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate Now gofundme</a>
+      <a href="donate.html" class="btn">Donate Now</a>
     </div>
   </section>
   <section id="programs" class="campaigns">
@@ -36,9 +36,9 @@
       <img src="orphan2.jpg" alt="Orphan Sponsorship">
       <img src="orphan3.jpg" alt="Orphan Sponsorship">
       <div class="campaign-content">
-        <h3>Orphan Sponsorship</h3>
-        <p>Provide education, healthcare, and care to orphaned children.</p>
-        <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate</a>
+        <h3>Education Sponsorship</h3>
+        <p>Sponsor a child's Quran memorization. Earn endless rewards and build a legacy of faith. Sadaqah jariyah that benefits generations</p>
+        <a href="donate.html" class="btn">Donate</a>
       </div>
     </div>
     <div class="campaign" data-images="water1.jpg,water2.jpg">
@@ -50,7 +50,7 @@
       <div class="campaign-content">
         <h3>Clean Water Projects</h3>
         <p>Install wells and filters to ensure clean water access.</p>
-        <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate</a>
+       <a href="donate.html" class="btn">Donate</a>
       </div>
     </div>
     <div class="campaign" data-images="food1.jpg,food2.jpg">
@@ -59,7 +59,7 @@
       <div class="campaign-content">
         <h3>Food Relief</h3>
         <p>Deliver emergency food packages to families during crises.</p>
-        <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate</a>
+        <a href="donate.html" class="btn">Donate</a>
       </div>
     </div>
     <div class="campaign" data-images="qurbani1.jpg,qurbani2.jpg,qurbani3.jpg,qurbani4.jpg">
@@ -70,7 +70,7 @@
       <div class="campaign-content">
         <h3>Qurbani Program</h3>
         <p>Offer your Qurbani to help needy families celebrate Eid with dignity.</p>
-        <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate</a>
+        <a href="donate.html" class="btn">Donate</a>
       </div>
     </div>    
     <div class="campaign" data-images="mosque1.jpg,mosque2.jpg,mosque3.jpg">
@@ -80,7 +80,7 @@
       <div class="campaign-content">
         <h3>Mosque Construction</h3>
         <p>Build mosques and prayer spaces for underserved communities.</p>
-        <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate</a>
+       <a href="donate.html" class="btn">Donate</a>
       </div>
     </div>
     
@@ -90,7 +90,7 @@
       <div class="campaign-content">
         <h3>Emergency Relief</h3>
         <p>Provide emergency relief to countries in war, facing disasters and more.</p>
-        <a href="https://www.gofundme.com/f/building-mosques-and-providing-essential-aid/wa/s?utm_campaign=fp_sharesheet&utm_medium=customer&utm_source=whatsapp&lang=en_GB" class="btn">Donate</a>
+        <a href="donate.html" class="btn">Donate</a>
       </div>
     </div>
   </section>
