--- a/donate.html
+++ b/donate.html
@@ -73,8 +73,10 @@
     <p><strong>Bank Name:</strong> Equity Bank Uganda</p>
 
     <br>
-    <h3>Donate to Our USD Account (Coming Soon)</h3>
-    <p><em>We will update this section with our USD account details soon.</em></p>
+    <h3 style="font-size:12px;">Donate to Our USD Account </h3>
+    <p><strong>Account Name:</strong>Mwanika Sajad Ali</p>
+    <p><strong>Account Number:</strong> 0770000853</p>
+    <p><strong>Bank Name:</strong> United Bank of Africa (UBA)</p>
   </section>
 
   <!-- Payment Services Logos -->
