--- a/donate.html
+++ b/donate.html
@@ -66,15 +66,15 @@
 
   <!-- Bank Donation Section -->
   <section class="bank-details">
-    <h3>Donate Directly to Our Bank</h3>
+    <h3 style="font-size:22px;">Donate Directly to Our Bank</h3>
     <p><strong>Account Name:</strong> Nur Al Sadaqa Charity Foundation</p>
     <p><strong>Account Number:</strong> 1014203182860</p>
     <p><strong>SWIFT Code:</strong> EQBLUGKA</p>
     <p><strong>Bank Name:</strong> Equity Bank Uganda</p>
 
     <br>
-    <h3 style="font-size:12px;">Donate to Our USD Account </h3>
-    <p><strong>Account Name:</strong>Mwanika Sajad Ali</p>
+    <h3 style="font-size:22px;">Donate to Our USD Account </h3>
+    <p><strong></i>Account Name:</strong> Mwanika Sajad Ali</p>
     <p><strong>Account Number:</strong> 0770000853</p>
     <p><strong>Bank Name:</strong> United Bank of Africa (UBA)</p>
   </section>
