--- a/donate.html
+++ b/donate.html
@@ -66,17 +66,17 @@
 
   <!-- Bank Donation Section -->
   <section class="bank-details">
-    <h3 style="font-size:22px;">Donate Directly to Our Bank</h3>
-    <p><strong>Account Name:</strong> Nur Al Sadaqa Charity Foundation</p>
-    <p><strong>Account Number:</strong> 1014203182860</p>
-    <p><strong>SWIFT Code:</strong> EQBLUGKA</p>
-    <p><strong>Bank Name:</strong> Equity Bank Uganda</p>
+    <h3 style="font-size:17px;">Donate Directly to Our Bank</h3>
+    <p style="font-size:17px;"><strong>Account Name:</strong> Nur Al Sadaqa Charity Foundation</p>
+    <p style="font-size:17px;"><strong>Account Number:</strong> 1014203182860</p>
+    <p style="font-size:17px;"><strong>SWIFT Code:</strong> EQBLUGKA</p>
+    <p style="font-size:17px;"><strong>Bank Name:</strong> Equity Bank Uganda</p>
 
     <br>
     <h3 style="font-size:22px;">Donate to Our USD Account </h3>
-    <p><strong></i>Account Name:</strong> Mwanika Sajad Ali</p>
-    <p><strong>Account Number:</strong> 0770000853</p>
-    <p><strong>Bank Name:</strong> United Bank of Africa (UBA)</p>
+    <p style="font-size:17px;"><strong></i>Account Name:</strong> Mwanika Sajad Ali</p>
+    <p style="font-size:17px;"><strong>Account Number:</strong> 0770000853</p>
+    <p style="font-size:17px;"><strong>Bank Name:</strong> United Bank of Africa (UBA)</p>
   </section>
 
   <!-- Payment Services Logos -->
