--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nur Al‑Sadaqa Foundation Uganda</title>
+  <title>AR-RAHMA ROJECTS UG</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"> 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
