--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       <label for="message">Message:</label>
       <textarea id="message" name="Message" rows="5" required></textarea>
     
-      <button type="submit"><a href="nuralsadaqafoundaton@gmail.com">Send Message</a></button>
+      <button type="submit"><a href="mailto:nuralsadaqafoundaton@gmail.com">Send Message</a></button>
     </form>    
   </section>
 
