--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   </section>
   <section class="contact-section" id="contact">
     <h2>Contact Us</h2>
-    <form class="contact-form" method="POST" enctype="text/plain">
+    <form class="contact-form" action="https://formsubmit.com/nuralsadaqafoundation@gmail.com" method="POST">
       <label for="name">Name:</label>
       <input type="text" id="name" name="Name" required>
     
@@ -215,7 +215,7 @@
       <label for="message">Message:</label>
       <textarea id="message" name="Message" rows="5" required></textarea>
     
-      <button type="submit"><a href="mailto:nuralsadaqafoundaton@gmail.com">Send Message</a></button>
+      <button type="submit">Send Message</button>
     </form>    
   </section>
 
